Issue #SB-533 fix:oles and Location alignment is not proper.

--- a/src/app/common/styles/main.css
+++ b/src/app/common/styles/main.css
@@ -1001,10 +1001,10 @@ div:focus {
   border-bottom: 1px solid #979797!important;
   border-radius: 0!important;
 }
-.ui.dropdown > .text {
+.ui.modal.ui.dropdown > .text {
   margin-left: -1.1em !important;
 }
-.ui.multiple.dropdown > .text {
+.ui.modal.ui.multiple.dropdown > .text {
   margin: 0 !important;
   line-height: 0 !important;
 }
@@ -1043,6 +1043,7 @@ div:focus {
   font-size: 1.3em !important;
 }
 .filterLocationInput {
+  padding-top: 12px !important;
   border: 0!important;
   border-bottom: 1px solid #979797!important;
   border-radius: 0!important;
